--- a/index.html
+++ b/index.html
@@ -50,21 +50,19 @@
 </head>
 <body class="bg-gray-50">
 
-    <header class="fixed top-0 w-full bg-white border-b border-gray-200 py-3 px-6 z-50 shadow-md">
+    <header class="fixed top-0 w-full border-b border-gray-400 py-3 px-6 z-50 shadow-md" style="background-color: #3FA110;">
         <div class="flex items-center justify-between max-w-7xl mx-auto">
-            <h1 class="text-xl md:text-2xl font-extrabold text-blue-800 tracking-tight">
-                RECIP <span class="text-green-600 font-medium text-base md:text-xl">| Reconhecimento Inovação com Propósito</span>
+            <h1 class="text-xl md:text-2xl font-extrabold text-white tracking-tight">
+                RECIP <span class="text-gray-200 font-medium text-base md:text-xl">| Reconhecimento Inovação com Propósito</span>
             </h1>
             
-            <button id="menu-toggle" class="lg:hidden p-2 text-gray-700 hover:text-blue-700">
+            <button id="menu-toggle" class="lg:hidden p-2 text-white hover:text-gray-200">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
             </button>
 
-            <div class="hidden sm:flex items-center space-x-2">
-                <span class="text-sm font-semibold text-gray-500 hidden sm:block">Apoio:</span>
-                <div class="h-8 w-24 bg-green-600 rounded-lg flex items-center justify-center">
-                    <span class="text-white text-xs font-bold">SICREDI</span>
-                </div>
+            <div class="hidden sm:flex items-center space-x-3">
+                <img src="img/inovacao-logo.png" alt="Logo Inovação" class="h-8 md:h-9">
+                <img src="img/sicredi-logo.png" alt="Logo Sicredi" class="h-8 md:h-9">
             </div>
         </div>
     </header>
