--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <li class="pt-4">
                     <a href="#radar" class="menu-item block px-3 py-2 rounded-lg text-white bg-green-600 hover:bg-green-700 font-bold transition-colors" data-content="radar">
                         <svg class="w-5 h-5 inline mr-2 align-text-bottom" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-                        Análise de Projetos
+                        Práticas realizadas 
                     </a>
                 </li>
             </ul>
@@ -686,4 +686,5 @@
 </body>
 
 </html>
+
 
