--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             display: block;
         }
 
-        /* Card de Detalhes Selecionado (Ajuste para cobrir mais espaço) */
+        /* Card de Detalhes Selecionado (Estilos Base) */
         .selected-card-container {
             width: 100%; /* Garante que o container use a largura total da seção */
             display: flex;
@@ -86,26 +86,25 @@
             margin-bottom: 32px;
         }
         .selected-card {
-            background: #ffffff; border: 1px solid #3FA110;
+            background: #ffffff;
             border-radius: 22px;
             padding: 28px 36px;
             min-width: 320px;
-            max-width: 800px; /* AUMENTADO: Permite que o card ocupe mais espaço na seção */
-            width: 95%; /* Garante que ele se adapte bem em telas menores */
-            box-shadow: 0 4px 16px rgba(63, 161, 16, 0.25);
+            max-width: 800px;
+            width: 95%; 
             display: flex;
             flex-direction: column;
             gap: 12px;
-            border-left: 10px solid #3FA110;
             font-size: 1.1rem;
             animation: fadeIn 0.3s;
+            /* O resto dos estilos (border, shadow, color) será aplicado via JS */
         }
         .card-maturity {
             font-weight: 600;
-            color: #3FA110;
             margin-top: 8px;
             padding-top: 8px;
             border-top: 1px solid #e0e0e0;
+            /* A cor do texto é definida via JS */
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px);}
@@ -115,7 +114,7 @@
         /* Tooltip */
         .tooltip {
             position: fixed;
-            background: #3FA110;
+            background: #3FA110; /* Mantido verde para o tooltip */
             color: #fff;
             padding: 8px 14px;
             border-radius: 12px;
@@ -402,7 +401,7 @@
 
 
         // ====================================================================
-        // NOVO CÓDIGO DO RADAR DE PRÁTICAS RECIP
+        // NOVO CÓDIGO DO RADAR DE PRÁTICAS RECIP - COM CORES POR DIMENSÃO
         // ====================================================================
 
         // Passo 1: Definir as 5 Dimensões do RECIP (Filtros e Eixos)
@@ -416,11 +415,14 @@
         ];
 
         // Mapeamento de cor único para o RECIP (o verde Sicredi)
-        const sicrediGreen = "#3FA110";
-        const desafioColors = {};
-        desafios.filter(d => d !== "Todas").forEach(d => {
-            desafioColors[d] = sicrediGreen;
-        });
+        const desafioColors = {
+            "Participativa": "#F59E0B",
+            "Colaborativa": "#3B82F6",
+            "Desenvolvimento de Capacidades": "#8B5CF6",
+            "ESG": "#10B981",
+            "Finanças Verdes": "#06B6D4"
+        };
+
 
         // Parâmetros do radar (5 dimensões = 36 graus cada)
         function getDesafioParams() {
@@ -437,7 +439,7 @@
                 params[d] = {
                     start: start,
                     end: end,
-                    color: desafioColors[d] || "#3FA110"
+                    color: desafioColors[d] || "#3FA110" // Usa a cor do mapa
                 };
             });
             return params;
@@ -537,7 +539,7 @@
                     const rad = Math.PI * angle / 180;
                     const x = 350 + radius * Math.cos(rad);
                     const y = 350 - radius * Math.sin(rad);
-                    points.push({...item, x, y, color});
+                    points.push({...item, x, y, color}); // Agora 'color' é a cor específica da dimensão
                 });
             });
             return points;
@@ -604,15 +606,26 @@
             tooltip.style.display = 'none';
         }
 
+        // FUNÇÃO MODIFICADA PARA APLICAR CORES DINÂMICAS NO CARD
         function showSelectedCard(pt) {
             const container = document.getElementById('selectedCardContainer');
             
+            // Gerar estilos dinâmicos baseados na cor do ponto (pt.color)
+            const cardStyle = `
+                background: #ffffff; 
+                border: 1px solid ${pt.color};
+                box-shadow: 0 4px 16px ${pt.color}40; /* 40 é 25% de opacidade */
+                border-left: 10px solid ${pt.color};
+            `;
+            const maturityStyle = `color: ${pt.color};`;
+
+
             container.innerHTML = `
-                <div class="selected-card">
+                <div class="selected-card" style="${cardStyle}">
                     <div class="card-title text-xl"><strong>${pt.nome}</strong></div>
                     <div class="card-category text-sm font-light text-gray-600">${pt.desafio}</div>
                     <div class="card-desc">${pt.descricao}</div>
-                    <div class="card-maturity">Maturidade de Adoção: ${pt.maturidade}</div>
+                    <div class="card-maturity" style="${maturityStyle}">Maturidade de Adoção: ${pt.maturidade}</div>
                 </div>
             `;
         }
