Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 </a>
                 
                 <h3 class="px-4 pt-4 text-xs font-semibold uppercase text-gray-400">Dimensões de Inovação</h3>
-                <a href="#dimensao-participativa" data-content-id="dimensao-participativa" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">1. Participativa</a>
-                <a href="#dimensao-colaborativa" data-content-id="dimensao-colaborativa" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">2. Colaborativa</a>
-                <a href="#dimensao-capacidades" data-content-id="dimensao-capacidades" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">3. Desenvolvimento de Capacidades</a>
-                <a href="#dimensao-esg" data-content-id="dimensao-esg" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">4. ESG</a>
-                <a href="#dimensao-financas-verdes" data-content-id="dimensao-financas-verdes" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">5. Finanças Verdes</a>
+                <a href="#dimensao-participativa" data-content-id="dimensao-participativa" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">Participativa</a>
+                <a href="#dimensao-colaborativa" data-content-id="dimensao-colaborativa" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">Colaborativa</a>
+                <a href="#dimensao-capacidades" data-content-id="dimensao-capacidades" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">Desenvolvimento de Capacidades</a>
+                <a href="#dimensao-esg" data-content-id="dimensao-esg" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">ESG</a>
+                <a href="#dimensao-financas-verdes" data-content-id="dimensao-financas-verdes" class="menu-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-lg">Finanças Verdes</a>
             </div>
         </nav>
 
@@ -569,3 +569,4 @@
     </script>
 </body>
 </html>
+
