Definição das competências

--- a/index.html
+++ b/index.html
@@ -108,7 +108,19 @@
                     <div class="p-6">
                         <div id="participativa-oquee" class="inner-tab-content block">
                             <h3 class="text-xl font-bold text-gray-800 mb-4">Definição</h3>
-                            <p class="text-gray-700">Foco em inovar nos mecanismos que fortalecem a voz e a influência dos associados na gestão.</p>
+                            <p class="text-gray-700">A Dimensão Participativa está diretamente vinculada ao princípio cooperativista da gestão democrática, pois envolve tanto o relacionamento com os cooperados quanto o processo de tomada de decisões. Essa abordagem exige que a cooperativa compreenda profundamente as necessidades e a dinâmica das comunidades locais, garantindo que os serviços oferecidos estejam alinhados às demandas reais dos associados.</p>
+
+                            <p class="text-gray-700">A participação ativa da comunidade na criação de produtos e serviços gera valor concreto para a cooperativa de crédito, já que os benefícios são definidos pelos próprios cooperados. Nessa dimensão, a avaliação concentra-se em práticas que fortalecem o vínculo entre cooperativa e associados, como:</p>
+
+                            <ul class="list-disc list-inside text-gray-700 space-y-2 mt-4">
+                                <li>Escuta ativa e análise das necessidades;</li>
+                                <li>Uso de ferramentas para identificar demandas;.</li>
+                                <li>Adoção de canais de comunicação bidirecionais e inclusivos;</li>
+                                <li>Estratégias que apoiem a transição digital e promovam a inclusão de públicos mais jovens.</li>
+                            </ul>    
+
+                            <p class="text-gray-700">O objetivo é assegurar que os cooperados se sintam parte das decisões e da construção do futuro da cooperativa, consolidando a gestão democrática como elemento central da inovação participativa.</p>
+
                         </div>
                         <div id="participativa-praticas" class="inner-tab-content hidden">
                             <div class="mb-4 relative">
@@ -140,7 +152,17 @@
                     <div class="p-6">
                         <div id="colaborativa-oquee" class="inner-tab-content block">
                             <h3 class="text-xl font-bold text-gray-800 mb-4">Definição</h3>
-                            <p class="text-gray-700">Transcender as fronteiras internas da cooperativa para construir valor em parceria.</p>
+                            <p class="text-gray-700">A Dimensão Colaborativa está diretamente ligada ao princípio cooperativista da intercooperação, pois envolve a capacidade de unir esforços com outras cooperativas, instituições e organizações externas para gerar soluções inovadoras e ampliar o impacto das iniciativas. Essa abordagem requer que a cooperativa estabeleça parcerias estratégicas que fortaleçam sua atuação local e regional, garantindo que os resultados beneficiem não apenas um público específico, mas toda a comunidade.</p>
+
+                            <p class="text-gray-700">A intercooperação cria valor concreto para a cooperativa de crédito ao potencializar recursos, ampliar o alcance das ações e reforçar a identidade cooperativista. Nessa dimensão, a avaliação concentra-se em práticas que promovem colaboração interna e externa, como:</p>
+
+                            <ul class="list-disc list-inside text-gray-700 space-y-2 mt-4">
+                                <li>Projetos em rede com outras cooperativas;</li>
+                                <li>Parcerias com universidades, startups, órgãos públicos e empresas;</li>
+                                <li>Iniciativas que estimulem inovação aberta e integração de ecossistemas.</li>
+                            </ul>
+
+                            <p class="text-gray-700">O objetivo é consolidar a cooperativa como um ator estratégico dentro de uma rede colaborativa, ampliando seu impacto social e econômico e reafirmando a intercooperação como elemento central da inovação colaborativa.</p>
                         </div>
                         <div id="colaborativa-praticas" class="inner-tab-content hidden">
                             <div class="mb-4 relative">
@@ -172,7 +194,18 @@
                     <div class="p-6">
                         <div id="capacidades-oquee" class="inner-tab-content block">
                             <h3 class="text-xl font-bold text-gray-800 mb-4">Definição</h3>
-                            <p class="text-gray-700">Garantir habilidades para prosperar em um mundo em rápida transformação.</p>
+                            <p class="text-gray-700">A Dimensão de Desenvolvimento de Capacidades está diretamente ligada ao princípio cooperativista da educação, formação e informação, pois envolve o fortalecimento contínuo das competências de cooperados, dirigentes, colaboradores e da comunidade. Essa abordagem posiciona a cooperativa como um agente de aprendizado e transformação, oferecendo condições para que seus públicos estejam preparados para enfrentar mudanças no mercado, novas tecnologias e práticas de gestão inovadoras.</p>
+
+                            <p class="text-gray-700">O desenvolvimento de capacidades gera valor concreto para a cooperativa de crédito ao promover engajamento, aumentar a competitividade e contribuir para a sustentabilidade de longo prazo. Nessa dimensão, a avaliação concentra-se em práticas que estimulam a aprendizagem contínua, como:</p> 
+
+                            <ul class="list-disc list-inside text-gray-700 space-y-2 mt-4">
+                                <li>Programas de capacitação técnica e comportamental;</li>
+                                <li>Incentivo ao empreendedorismo;</li>
+                                <li>Desenvolvimento de lideranças jovens;</li>
+                                <li>Ações de educação financeira voltadas para associados e comunidade.</li>
+                            </ul>
+
+                            <p class="text-gray-700">O objetivo é consolidar a cooperativa como um polo de conhecimento e desenvolvimento humano, reafirmando a educação e a formação como elementos centrais da inovação em desenvolvimento de capacidades.</p>
                         </div>
                         <div id="capacidades-praticas" class="inner-tab-content hidden">
                             <div class="mb-4 relative">
@@ -204,7 +237,19 @@
                     <div class="p-6">
                         <div id="esg-oquee" class="inner-tab-content block">
                             <h3 class="text-xl font-bold text-gray-800 mb-4">Definição</h3>
-                            <p class="text-gray-700">Incorporar ativamente a sustentabilidade e a responsabilidade social em todas as operações.</p>
+                            <p class="text-gray-700">A Dimensão ESG está diretamente ligada ao princípio cooperativista do interesse pela comunidade, pois expressa o compromisso da cooperativa com práticas responsáveis que integram aspectos ambientais, sociais e de governança à sua estratégia. Essa abordagem exige uma visão sistêmica e de longo prazo, equilibrando a geração de valor econômico com impactos positivos para a sociedade e para o meio ambiente.</p>
+
+                            <p class="text-gray-700">A incorporação de critérios ESG gera valor concreto para a cooperativa de crédito ao fortalecer sua credibilidade, atrair novos públicos, reduzir riscos e ampliar sua contribuição para o desenvolvimento sustentável. Nessa dimensão, a avaliação concentra-se em práticas que reforçam sustentabilidade, equidade e transparência, como:</p>
+
+                            <ul class="list-disc list-inside text-gray-700 space-y-2 mt-4">
+                                <li>Adoção de políticas ambientais internas;</li>
+                                <li>Promoção da diversidade e inclusão;</li>
+                                <li>Investimento em projetos de impacto social;</li>
+                                <li>Implementação de mecanismos robustos de governança;</li>
+                                <li>Prestação de contas clara aos associados e à sociedade.</li>
+                            </ul>
+
+                            <p class="text-gray-700">O objetivo é consolidar a cooperativa como referência em responsabilidade socioambiental, reafirmando o interesse pela comunidade como elemento central da inovação orientada por critérios ESG.</p>
                         </div>
                         <div id="esg-praticas" class="inner-tab-content hidden">
                             <div class="mb-4 relative">
@@ -236,7 +281,18 @@
                     <div class="p-6">
                         <div id="financas-verdes-oquee" class="inner-tab-content block">
                             <h3 class="text-xl font-bold text-gray-800 mb-4">Definição</h3>
-                            <p class="text-gray-700">Motor da transição para uma economia de baixo carbono, utilizando o poder do crédito.</p>
+                            <p class="text-gray-700">A Dimensão de Finanças Verdes está diretamente ligada ao princípio cooperativista do interesse pela comunidade, pois reflete a responsabilidade da cooperativa em promover práticas financeiras que conciliem crescimento econômico, preservação ambiental e bem-estar social. Essa abordagem exige que a cooperativa alinhe sua estratégia de negócios a critérios de sustentabilidade, incorporando objetivos globais como os ODS da ONU e boas práticas de ESG.</p>
+
+                            <p class="text-gray-700">O engajamento com as finanças verdes gera valor concreto para a cooperativa de crédito ao ampliar sua relevância no mercado, fortalecer sua imagem institucional e contribuir para um futuro mais sustentável para associados e comunidade. Nessa dimensão, a avaliação concentra-se em práticas que reforçam a sustentabilidade ambiental e social, como:</p>
+
+                            <ul class="list-disc list-inside text-gray-700 space-y-2 mt-4">
+                                <li>Financiamento de projetos com impacto positivo;</li>
+                                <li>Implementação de políticas internas de eficiência e redução de emissões;</li>
+                                <li>Utilização de critérios socioambientais na concessão de crédito;</li>
+                                <li>Desenvolvimento de produtos financeiros sustentáveis.</li>
+                            </ul>
+
+                            <p class="text-gray-700">O objetivo é consolidar a cooperativa como um agente transformador na transição para uma economia verde, reafirmando o interesse pela comunidade como elemento central da inovação em finanças verdes.</p>
                         </div>
                         <div id="financas-verdes-praticas" class="inner-tab-content hidden">
                             <div class="mb-4 relative">
