--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
+
         
+        ul {
+            margin-bottom: 1em; /* Espaço abaixo da lista */
+        }
+
         .sidebar-fixed {
             position: sticky;
             top: 4rem;
@@ -625,5 +630,6 @@
     </script>
 </body>
 </html>
+
 
 
