Correção da div

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 </div>
                 </div>
             </div>
+            </div>    
 
             <div id="content-dimensao-colaborativa" class="content-section hidden w-full max-w-6xl mx-auto space-y-6 animate-fade">
                 <div class="bg-white p-6 rounded-lg shadow-sm border-l-4 border-[#3FA110]">
@@ -698,6 +699,7 @@
     </script>
 </body>
 </html>
+
 
 
 
