--- a/index.html
+++ b/index.html
@@ -247,7 +247,112 @@
                             </div>
                         </div>
                         <div id="colaborativa-forcas" class="inner-tab-content hidden"><p class="text-gray-500 italic">Conteúdo...</p></div>
-                        <div id="colaborativa-oportunidades" class="inner-tab-content hidden"><p class="text-gray-500 italic">Conteúdo...</p></div>
+                        <div id="colaborativa-oportunidades" class="inner-tab-content hidden">
+                            
+<div id="colaborativa-oportunidades" class="inner-tab-content hidden animate-fade">
+    <h3 class="text-xl font-bold text-gray-800 mb-6 flex items-center">
+        <svg class="w-6 h-6 text-[#F59E0B] mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path>
+        </svg>
+        Fronteiras de Evolução – Dimensão Colaborativa
+    </h3>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+        <!-- Item 1 -->
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19V6a2 2 0 012-2h2a2 2 0 012 2v13"></path>
+                </svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Intercooperação Estruturada</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Sistematizar e divulgar estudos de caso, metodologias e resultados, criando repositórios de boas práticas e grupos temáticos permanentes.
+                </p>
+            </div>
+        </div>
+
+        <!-- Item 2 -->
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                </svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Escalabilidade Colaborativa</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Desenvolver mecanismos de governança e padrões de replicabilidade, com relatórios estruturados e ciclos de aprendizagem contínua.
+                </p>
+            </div>
+        </div>
+
+        <!-- Item 3 -->
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M9 21V3m6 18V3"></path>
+                </svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Open Finance Estratégico</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Construir modelos preditivos e dashboards integrados, usando dados do Open Finance para antecipar necessidades e mensurar impacto.
+                </p>
+            </div>
+        </div>
+
+        <!-- Item 4 -->
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Integração com a Central</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Estruturar mecanismos adicionais para registrar interações e acompanhar demandas e retornos da cooperativa central com mais eficiência.
+                </p>
+            </div>
+        </div>
+
+        <!-- Item 5 -->
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3"></path>
+                </svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Inovação Aberta</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Consolidar métricas robustas de impacto social, relatórios de desempenho comunitário e parcerias estruturadas de longo prazo.
+                </p>
+            </div>
+        </div>
+
+        <!-- Item 6 -->
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4 md:col-span-2">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path>
+                </svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Governança Colaborativa</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Criar padrões sistêmicos para intercooperação, com relatórios anuais e fóruns permanentes que consolidem práticas e resultados.
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -699,6 +804,7 @@
     </script>
 </body>
 </html>
+
 
 
 
